# xccl

./: .gitignore  0001-ompi-coll-xccl.patch  Dockerfile  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  cudalt.py  ompi_coll_xccl.patch
m4/: hmc.m4  nccl.m4  sharp.m4  ucx.m4  (+1 more)
mccl/src/: Makefile.am
mccl/src/api/: mccl.h
mccl/src/core/: allreduce.c  barrier.c  bcast.c  mccl.c  mccl_core.h  mccl_inline.h  mccl_team.h  sbgp.c  sbgp.h  schedule.c  schedule.h  schedule_bcast.c  socketid.c
mccl/test/: Makefile.am  allreduce_benchmark.c  allreduce_correctness.c  bcast_correctness.c  mccl_test.c  mccl_test.h
src/: Makefile.am
src/api/: tccl.h  tccl_tls.h  xccl.h  xccl_def.h  xccl_status.h  xccl_tls.h  xccl_version.h
src/core/: ptr_array.h  tasks_pool.c  tasks_pool.h  tasks_queue.c  tasks_queue.h  tccl_collective.c  tccl_context.c  tccl_finalize.c  tccl_init.c  tccl_query.c  tccl_team.c  tccl_team_lib.h  xccl_collective.c  xccl_collective.h  xccl_context.c  xccl_context.h  xccl_finalize.c  xccl_global_opts.c  xccl_global_opts.h  xccl_init.c  xccl_lib.c  xccl_lib.h  xccl_lock_free_tasks_queue.c  xccl_lock_free_tasks_queue.h  xccl_mm.c  xccl_mm.h  xccl_progress_queue.c  xccl_progress_queue.h  xccl_query.c  xccl_schedule.c  xccl_schedule.h  xccl_tasks_queue.c  xccl_tasks_queue.h  xccl_team.c  xccl_team.h  xccl_team_lib.c  xccl_team_lib.h  xccl_ucs.h
src/team_lib/: tccl_team_lib.h
src/team_lib/dpu/: Makefile.am  xccl_dpu_lib.c  xccl_dpu_lib.h
src/team_lib/hier/: Makefile.am  tccl_hier_context.c  tccl_hier_context.h  tccl_hier_lib.c  tccl_hier_lib.h  tccl_hier_sbgp.c  tccl_hier_sbgp.h  tccl_hier_schedule.c  tccl_hier_schedule.h  tccl_hier_schedule_allreduce.c  tccl_hier_schedule_barrier.c  tccl_hier_schedule_bcast.c  tccl_hier_team.c  tccl_hier_team.h  xccl_hier_context.c  xccl_hier_context.h  xccl_hier_lib.c  xccl_hier_lib.h  xccl_hier_sbgp.c  xccl_hier_sbgp.h  xccl_hier_schedule.c  xccl_hier_schedule.h  xccl_hier_schedule_allreduce.c  xccl_hier_schedule_alltoall.c  xccl_hier_schedule_barrier.c  xccl_hier_schedule_bcast.c  xccl_hier_task_schedule.h  xccl_hier_team.c  xccl_hier_team.h
src/team_lib/hmc/: Makefile.am  xccl_hmc_lib.c  xccl_hmc_lib.h
src/team_lib/mhba/: Makefile.am  xccl_mhba_collective.c  xccl_mhba_collective.h  xccl_mhba_ib.c  xccl_mhba_ib.h  xccl_mhba_lib.c  xccl_mhba_lib.h  xccl_mhba_mkeys.c  xccl_mhba_mkeys.h  xccl_mhba_socket_comm.c  xccl_mhba_socket_comm.h  xccl_mhba_team.c
src/team_lib/mpod/: Makefile.am  xccl_mpod_allgather.c  xccl_mpod_allreduce.c  xccl_mpod_allreduce_coalesce.c  xccl_mpod_allreduce_replicate.c  xccl_mpod_allreduce_split.c  xccl_mpod_alltoall.c  xccl_mpod_alltoallv.c  xccl_mpod_barrier.c  xccl_mpod_bcast.c  xccl_mpod_cpu.c  xccl_mpod_lib.c  xccl_mpod_lib.h  xccl_mpod_nccl_reqs.c
src/team_lib/multirail/: Makefile.am  xccl_mrail_lib.c  xccl_mrail_lib.h
src/team_lib/nccl/: Makefile.am  xccl_nccl_collective.c  xccl_nccl_collective.h  xccl_nccl_lib.c  xccl_nccl_lib.h
src/team_lib/sharp/: Makefile.am  tccl_sharp_collective.c  tccl_sharp_collective.h  tccl_sharp_lib.c  tccl_sharp_lib.h  tccl_sharp_map.h  xccl_sharp_collective.c  xccl_sharp_collective.h  xccl_sharp_lib.c  xccl_sharp_lib.h  xccl_sharp_map.h
src/team_lib/ucx/: Makefile.am  tccl_ucx_context.c  tccl_ucx_context.h  tccl_ucx_ep.h  tccl_ucx_lib.c  tccl_ucx_lib.h  tccl_ucx_sendrecv.h  tccl_ucx_team.c  tccl_ucx_team.h  xccl_ucx_context.c  xccl_ucx_context.h  xccl_ucx_ep.h  xccl_ucx_lib.c  xccl_ucx_lib.h  xccl_ucx_sendrecv.h  xccl_ucx_tag.h  xccl_ucx_team.c  xccl_ucx_team.h
src/team_lib/ucx/allgather/: allgather.h  allgather_ring.c
src/team_lib/ucx/allreduce/: allreduce.c  allreduce.h  allreduce_knomial.c  allreduce_knomial.h  allreduce_sra.c
src/team_lib/ucx/alltoall/: alltoall.h  alltoall_linear_shift.c  alltoall_pairwise.c
src/team_lib/ucx/alltoallv/: alltoallv.h  alltoallv_pairwise.c
src/team_lib/ucx/barrier/: barrier.h  barrier_knomial.c
src/team_lib/ucx/bcast/: bcast.h  bcast_knomial.c  bcast_linear.c
src/team_lib/ucx/fanin/: fanin.h  fanin_linear.c
src/team_lib/ucx/fanout/: fanout.h  fanout_linear.c
src/team_lib/ucx/reduce/: reduce.h  reduce_knomial.c  reduce_linear.c
src/team_lib/vmc/: Makefile.am  tccl_vmc_lib.c  tccl_vmc_lib.h  xccl_vmc_lib.c  xccl_vmc_lib.h
src/topo/: xccl_sbgp.c  xccl_sbgp.h  xccl_topo.c  xccl_topo.h
src/utils/: mem_component.c  mem_component.h  reduce.h  socketid.c  utils.h  xccl_log.h
src/utils/cuda/: Makefile.am  cuda_mem_component.c  cuda_mem_component.h
src/utils/cuda/kernels/: Makefile.am  xccl_cuda_kernel.cu  xccl_cuda_reduce.cu
src/utils/cuda/reduce/: Makefile.am  xccl_cuda_reduce.cu  xccl_cuda_reduce_multi.cu
tccl/: configure.ac
tccl/m4/: sharp.m4  ucx.m4
tccl/src/api/: tccl.h  tccl_def.h  tccl_status.h  tccl_version.h
tccl/src/team_lib/: tccl_team_lib.c  tccl_team_lib.h
tccl/src/team_lib/sharp/: Makefile.am  tccl_sharp_collective.c  tccl_sharp_collective.h  tccl_sharp_lib.c  tccl_team_lib_sharp.c  tccl_team_lib_sharp.h  tccl_team_sharp_collective.c  tccl_team_sharp_collective.h
tccl/src/team_lib/ucx/: Makefile.am  tccl_ucx_context.c  tccl_ucx_context.h  tccl_ucx_lib.c  tccl_ucx_lib.h  tccl_ucx_sendrecv.h  tccl_ucx_team.c  tccl_ucx_team.h
tccl/src/team_lib/ucx/allreduce/: allreduce.h  allreduce_knomial.c
tccl/src/team_lib/ucx/barrier/: barrier.h  barrier_knomial.c
tccl/src/team_lib/ucx/bcast/: bcast.h  bcast_knomial.c  bcast_linear.c
tccl/src/team_lib/ucx/fanin/: fanin.h  fanin_linear.c
tccl/src/team_lib/vmc/: Makefile.am  tccl_team_lib_vmc.c  tccl_team_lib_vmc.h  tccl_vmc_lib.c
tccl/src/utils/: utils.h
tccl/test/: Makefile.am  test.c  test_mpi.c  test_mpi.h  test_mpi_barrier.c  test_mpi_bcast.c
test/: Makefile.am  test.c  test_mpi.c  test_mpi.h  test_mpi_allgather.c  test_mpi_allreduce.c  test_mpi_alltoall.c  test_mpi_alltoallv.c  test_mpi_barrier.c  test_mpi_bcast.c  test_mpi_create_team_nb.c  test_mpi_cuda_allreduce.c  test_mpi_cuda_alltoall.c  test_mpi_cuda_bcast.c  test_mpi_cuda_reduce.c  test_mpi_fanout_get.c  test_mpi_reduce.c  test_mt.c  test_utils.c  test_utils.h
(+17 files in other folders)
